<resources>
    <string name="app_name">powerrangers</string>

    <!-- communication part -->
    <string name="activityDetailContainer_targetFr">Target Fragment </string>
    <string name="targetFrDetailRangerTask">FragmentDetailRangerTask</string>
    <string name="targetFrDetailConfirmerCase">FragmentDetailConfirmerCase</string>
    <string name="targetFrDetailUsersOpenTask">FragmentDetailUsersOpenTask</string>
    <string name="sharedPrefs_userDbIdPrefname">userDbId</string>
    <string name="sharedPrefs_userDbId">sharedPrefs_userDbId</string>

    <!-- Tabnames-->
    <string name="start">start</string>
    <string name="confirmTasks">voting</string>
    <string name="confirmCases">confirm</string>
    <string name="findYorJob">jobs</string>

    <!-- Tags for tabnames -->
    <string name="startTag">startTag</string>
    <string name="votingTasksTag">votingTag</string>
    <string name="confirmCasesTag">confirmTag</string>
    <string name="confirmCaseDetailTag">confirmDetailTag</string>
    <string name="rangerTasksTag">jobTag</string>
    <string name="rangerTaskDetailTag">rangerDetailTag</string>
    <string name="usersOpenTasks">usersOpenTasksTag</string>
    <string name="usersOpenTaskDetailTag">usersOpenTaskDetailTag</string>
    <string name="fragmentTabsTag">tabHostTag</string>
    <string name="fragmentWaitTag">waitTag</string>

    <!-- Serializable tabnames -->
    <string name="votingTasksSerializable">votingListItems</string>
    <string name="confirmCasesSerializable">casesListItems</string>
    <string name="rangerTasksSerializable">tasksListItems</string>
    <string name="tabHostSerializable">tabhost</string>
    <string name="openTasksSerializable">openTasksListItems</string>

    <!-- FragmentStart-->
    <string name="balance">earned</string>
    <string name="openTasks_2">open tasks to complete</string>
    <string name="reportesCases">reported cases</string>
    <string name="fStart_donatedPower">donated power</string>
    <string name="confirmedCases">confirmed cases</string>
    <string name="completedTasks">completed tasks</string>
    <string name="chooseProfilePicture">Wähle neues Profilbild</string>
    <string name="uploadPicture">Bild wird hochgeladen...</string>
    <string name="errorSignUpFirst">Logge dich erst ein, bevor du ein Fotos hochlädst.</string>
    <string name="errorUpload">Ups, das hat nicht geklappt. Probiers nochmal.</string>
    <string name="uploaded">% uploaded...</string>
    <string name="title_activity_detail_container">ActivityDetailContainer</string>
    <string name="fStart_closeAppError">Sorry, an error occured.</string>
    <string name="frStart_logout">Logout</string>
    <string name="frStartUsername">Username</string>

    <!-- Intent Strings-->
    <string name="intent_current_user">Current User</string>

    <!-- DB fields strings-->
    <string name="tasks_taskPictureAfter">taskPictureAfter</string>
    <string name="tasks_taskCompleted">taskCompleted</string>


    <!-- FragmentLogin-->
    <string name="fLogin_Signin">Sign in</string>
    <string name="fLogin_Register">Register</string>
    <string name="fLogin_AlreadyRegistered">Already a Power Ranger? <b>Sign in.</b></string>
    <string name="fLogin_NotRegisteredYet">Do not have an account? Register now!</string>
    <string name="fLogin_EnterPassword">Enter your password</string>
    <string name="fLogin_EnterName">Enter your name</string>
    <string name="fLogin_EnterEmail">Enter your email</string>
    <string name="fLogin_Slogan">and help us save the planet!</string>
    <string name="fLogin_Slogan_Title">Be a Power Ranger</string>

    <!-- Buttonnames in Start Screen-->
    <string name="donate">donate</string>
    <string name="reportACase">report a case</string>
    <string name="frStart_permissionNeeded">Permission is needed to upload profile picture.</string>

    <!-- ActivityReportCase-->
    <string name="reportCaseActivityTitle">Report a case</string>
    <string name="reportTitleOfCase">Title</string>
    <string name="reportCityOfCase">City</string>
    <string name="reportCountryOfCase">Country</string>
    <string name="reportScalaOfCase">Pollution Scale:</string>
    <string name="reportAreaCoordinates">Estimate the size of the whole polluted area in x and y in meters.</string>
    <string name="reportXCoordinateOfCase">Width</string>
    <string name="reportYCoordinateOfCase">Length</string>
    <string name="reportPictureOfCase">Upload picture</string>
    <string name="reportInformationOfCase">Comment</string>
    <string name="reportCaseButton">Report Case</string>
    <string name="reportCaseCheckboxLow">Low</string>
    <string name="reportCaseCheckboxMiddle">Medium</string>
    <string name="reportCaseCheckboxHigh">High</string>
    <string name="reportUploadedPicture">Uploaded pictures: </string>
    <string name="reportCanNotShowUploadedPicture">Sorry can not show the picture you uploaded</string>
    <string name="reportException">Something went wrong!</string>
    <string name="reportCaseSuccess">Case was reported successfully</string>
    <string name="reportCaseFillFields">Please give all necessary inforamtion!</string>
    <string name="reportInstructionManualUploadPics1">First take a photo of the whole area.</string>
    <string name="reportInstructionManualUploadPics2">Now seperate the area in equal parts and take a photo of each.</string>
    <string name="uploadPictureFailed">Uploading of picture failed! Sorry</string>
    <string name="reportChooseCasePic">Choose a picture of the hole trashy area</string>
    <string name="reportChooseTaskPics">Choose pictures of the seperated area</string>

    <!-- FragmentDetailConfirmerCase-->
    <string name="detailConfirmerCaseFragmentTitle">Confirm case</string>
    <string name="detailConfirmerCaseCaseTitle">Confirm a case</string>
    <string name="detailConfirmerCaseConfirmButton">Confirm this case</string>
    <string name="detailConfirmerCaseDectiveError">Sorry, you can\'t confirm your own case! </string>
    <string name="detailConfirmerCaseConfirmMessage">Thank you for confirming this case :-)!</string>
    <string name="detailsConfirmerCaseExplanation">Check the information below and edit if necessary.</string>


    <!-- FragmentRangerTasks & DetailRangerTask-->
    <string name="titleRangerTasks">Ranger Tasks</string>
    <string name="emptyListRT">Sorry, there are no ranger jobs. \n You can confirm some cases :)</string>
    <string name="taskDescriptionDetail">Here comes the task description</string>
    <string name="pollutionDetail">Pollution:</string>
    <string name="rangersDetail">Rangers</string>
    <string name="buttonJoinAsRanger">Join as Ranger</string>
    <string name="detailRangerTaskComment">\nWe need you!</string>


    <!-- FragmentConfirmerCases-->
    <string name="titleConfirmerCases">Cases to confirm</string>
    <string name="emptyListCC">Sorry, there are no cases to confirm.</string>

    <!-- FragmentUsersOpenTasks & DetailUsersOpenTask-->
    <string name="titleUsersOpenTasks">Open Tasks</string>
    <string name="waitUsersOpenTasks">Wait for voting to be completed!</string>
    <string name="buttonUploadImage">Upload image</string>
    <string name="completeTask">Complete Task</string>
    <string name="textToUpload">To complete this task, take a picture of the cleaned area and upload it.</string>
    <string name="textNoNeedToUpload">You have already completed this task. Wait for the confirmation of your job!</string>

    <!-- FragmentVotingTasks-->
    <string name="titleVotingTasks">Voting Tasks</string>
    <string name="emptyListVT">Sorry, there are no tasks to vote for!</string>
    <string name="errorRangerVotesHisOwnTask">Sorry, you can not vote for your own task! ;-)</string>
    <string name="votingNotOk">Thank you for voting, ranger won\'t get his reward ;-(</string>
    <string name="votingOk">Thank you for voting, ranger will get his reward ;-)</string>

    <!-- ListItems-->
    <string name="placeholderTitle">Title Placeholder</string>
    <string name="placeholderDesc">Description Placeholder</string>
    <string name="placeholderLocation">Location Placeholder</string>

    <!-- ActivityDonate-->
    <string name="aDonate_donateHeadline">Combine your powers!</string>
    <string name="aDonate_donateIntro">Woho! Thanks, you wanna share your power and combine them with the rest of the world to save our planet!</string>
    <string name="aDonate_buttonDonate">Donate</string>
    <string name="aDonate_toastSuccessDonate">Powers combined successfully</string>
    <string name="aDonate_toastFailDonate">Something went wrong, please try again.</string>
    <string name="aDonate_currency">€</string>
    <string name="aDonate_prefixValue">Spende </string>
    <string name="aDonate_donateEuro"> €</string>

</resources>
