<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_detail_confirm_case"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="msp.powerrangers.ui.FragmentDetailConfirmerCase">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewDetailCaseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop = "true"
                    android:textSize="13pt"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="Case to Confirm"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/fConfirmCaseViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textViewConfirmCaseTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportTitleOfCase"
                        android:fontFamily="casual"/>

                    <EditText
                        android:id="@+id/editTextConfirmCaseTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewConfirmCaseCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportCityOfCase"
                        android:fontFamily="casual"/>

                    <EditText
                        android:id="@+id/editTextConfirmCaseCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewConfirmCaseCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportCountryOfCase"
                        android:fontFamily="casual"/>

                    <EditText
                        android:id="@+id/editTextConfirmCaseCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewConfirmCaseScala"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportScalaOfCase"
                        android:fontFamily="casual"/>

                    <RadioButton
                        android:id="@+id/radioButtonConfirmCaseLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportCaseCheckboxLow"
                        android:fontFamily="casual"/>

                    <RadioButton
                        android:id="@+id/radioButtonConfirmCaseMiddle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportCaseCheckboxMiddle"
                        android:fontFamily="casual"/>

                    <RadioButton
                        android:id="@+id/radioButtonConfirmCaseHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportCaseCheckboxHigh"
                        android:fontFamily="casual"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewConfirmCaseAreaCoordinates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportAreaCoordinates"
                        android:fontFamily="casual"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewConfirmCaseXCoordinate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportXCoordinateOfCase"
                        android:fontFamily="casual"/>

                    <EditText
                        android:id="@+id/editTextConfirmCaseXCoordinate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewConfirmCaseYCoordinate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportYCoordinateOfCase"
                        android:fontFamily="casual"/>

                    <EditText
                        android:id="@+id/editTextConfirmCaseYCoordinate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        android:text="" />
                </LinearLayout>
                

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewConfirmCaseInformation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reportInformationOfCase"
                        android:fontFamily="casual"/>

                    <EditText
                        android:id="@+id/editTextConfirmCaseInformation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonConfirmCaseReport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorWhite"
                        android:text="@string/detailConfirmerCaseConfirmButton"/>
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</FrameLayout>