<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_donate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="msp.powerrangers.ui.ActivityDonate">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="97dp"
            android:background="@drawable/pinkranger_helmet"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/aDonate_donateHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aDonate_textViewHeadlineDonate"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:text="@string/aDonate_donateIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aDonate_textViewIntroDonate"
            android:gravity="center"
            android:textSize="15dp"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorPrimaryDark" />

        <SeekBar
            android:id="@+id/seekBarDonate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="200"
            android:max="1000"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="3" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="30dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="200"
                android:id="@+id/aDonate_donateValue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="30dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/aDonate_donateEuro"
                android:id="@+id/aDonate_donateEuro" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aDonate_buttonDonate"
            android:text="@string/aDonate_buttonDonate"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_mainbutton" />
    </LinearLayout>
</RelativeLayout>